# FlightSystem

./: .gitignore  CMakeLists.txt  FlightSystem.pro  FlightSystem.pro.user.d754e96  MySQL_DRIVER_INSTALL.md  README.md  t.md  《软件工程初级实训》大作业开发报告基本格式.md
MySQL/: README.md  airplane.sql  airport.sql  city.sql  flight.sql  init.sql  init_complete.sql  test_data.sql  ticket.sql  user.sql
app/: app.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
backend/: backend.cpp  backend.h  backend.pro
config/: db.ini
dao/: AirplaneDao.h  AirportDao.h  CityDao.cpp  CityDao.h  FlightDao.h  TicketDao.h  UserDao.h  dao.pro
dao_impl/: FlightDaoImpl.cpp  airplane_dao_impl.cpp  airplane_dao_impl.h  airplanedaoimpl.cpp  airport_dao_impl.cpp  airport_dao_impl.h  city_dao_impl.cpp  city_dao_impl.h  citydaoimpl.cpp  dao_impl.cpp  dao_impl.h  dao_impl.pro  flight_dao_impl.cpp  flight_dao_impl.h  ticket_dao_impl.cpp  ticket_dao_impl.h  ticketdaoimpl.cpp  ticketdaoimpl.h  user_dao_impl.cpp  user_dao_impl.h
db/: db.pro  dbmanager.cpp  dbmanager.h
model/: Airplane.h  Airport.h  City.h  Flight.h  Ticket.h  User.h  model.h  model.pro
resources/test/: test.pro  test_db.cpp
test/: test.pro  test_backend.cpp  test_backend.pro  test_db.cpp
ui_admin/: dummy.h  main.cpp  ui_admin.cpp  ui_admin.h  ui_admin.pro  ui_admin.ui
ui_client/: ui_client.cpp  ui_client.h  ui_client.pro  ui_client.ui
